// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberKeyboard - Demo Simple type 1`] = `
<div class="md-example-child md-example-child-number-keyboard md-example-child-number-keyboard-1">
  <div class="md-number-keyboard">
    <div class="md-popup bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <!---->
        <div class="md-number-keyboard-container simple">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <li class="keyboard-number-item no-bg"></li>
              <li class="keyboard-number-item"><span>0</span></li>
              <li class="keyboard-number-item no-bg delete"><span></span></li>
            </ul>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NumberKeyboard - Demo With confirmation key and decimal point, generally used for price or amount input 1`] = `
<div class="md-example-child md-example-child-number-keyboard md-example-child-number-keyboard-0">
  <div class="md-number-keyboard">
    <div class="md-popup bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <!---->
        <div class="md-number-keyboard-container professional">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <li class="keyboard-number-item"><span>.</span></li>
              <li class="keyboard-number-item"><span>0</span></li>
              <li class="keyboard-number-item slidedown"><span></span></li>
            </ul>
          </div>
          <div class="keyboard-operate">
            <ul class="keyboard-operate-list">
              <li class="keyboard-operate-item delete"><span></span></li>
              <li class="keyboard-operate-item confirm"><span>确定</span></li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="md-number-keyboard">
    <div class="md-popup bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <!---->
        <div class="md-number-keyboard-container professional">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <!---->
              <li class="keyboard-number-item large-item"><span>0</span></li>
              <li class="keyboard-number-item slidedown"><span></span></li>
            </ul>
          </div>
          <div class="keyboard-operate">
            <ul class="keyboard-operate-list">
              <li class="keyboard-operate-item delete"><span></span></li>
              <li class="keyboard-operate-item confirm"><span>确定</span></li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="md-number-keyboard">
    <div class="md-popup bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <!---->
        <div class="md-number-keyboard-container professional">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <li class="keyboard-number-item"><span>x</span></li>
              <li class="keyboard-number-item"><span>0</span></li>
              <li class="keyboard-number-item slidedown"><span></span></li>
            </ul>
          </div>
          <div class="keyboard-operate">
            <ul class="keyboard-operate-list">
              <li class="keyboard-operate-item delete"><span></span></li>
              <li class="keyboard-operate-item confirm"><span>确定</span></li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
